# egui-desktop

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: auto-bump.yml  publish.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/starter/: app.rs  content.rs  icons.rs  lib.rs  main.rs  sidebar.rs  theme_provider.rs
examples/: basic_app.rs  custom_title_bar.rs  multi_platform.rs  multi_window.rs  no_title_app.rs
src/: lib.rs
src/menu/: api.rs  items.rs  menu_bar.rs  mod.rs  shortcuts.rs
src/theme/: api.rs  mod.rs
src/titlebar/: api.rs  control_buttons.rs  main.rs  mod.rs  options.rs  render_bar.rs
src/utils/: mod.rs  os.rs  resize_handles.rs  rounded_corners.rs
