[package]
name = "egui-desktop"
version = "0.1.0"
edition = "2024"
description = "Cross-platform desktop UI components for egui applications"
license = "MIT"
repository = "https://github.com/PxlSyl/egui-desktop"

[dependencies]
egui = "0.32"
eframe = "0.32"
egui_extras = { version = "0.32", features = ["all_loaders"] }
raw-window-handle = "0.6"
lazy_static = "1.4"

# Platform-specific dependencies for native rounded corners
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# X11 support
x11 = "2.21"
x11-dl = "2.2"
# Wayland support
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client"] }
wayland-cursor = "0.31"
# Linux system libraries
libc = "0.2"

[dev-dependencies]
