[package]
name = "egui-desktop"
version = "0.1.4"
edition = "2024"
description = "Cross-platform desktop UI components for egui applications"
license = "MIT"
repository = "https://github.com/PxlSyl/egui-desktop"

[dependencies]
egui = "0.32"
eframe = "0.32"
egui_extras = { version = "0.32", features = ["all_loaders"] }
raw-window-handle = "0.6"
lazy_static = "1.4"

# Platform-specific dependencies for native rounded corners
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[dev-dependencies]
