[package]
name = "egui-desktop-cli"
version = "0.1.9"
edition = "2024"
description = "CLI tool to initialize egui-desktop projects with a complete starter template"
license = "MIT"
repository = "https://github.com/PxlSyl/egui-desktop"
keywords = ["egui", "desktop", "gui", "cli", "template"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "egui-desktop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
